--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/home-page-styles.css">
+    <link rel="stylesheet" href=assets/css/home-page-styles.css>
     <script src="assets/scripts/card-hover-animation.js"></script>
     <title>Spider-Man | Multiversos</title>
 </head>
