finalizando as primeiras páginas

--- a/pages/andrew-garfield/spiderman2.html
+++ b/pages/andrew-garfield/spiderman2.html
@@ -12,7 +12,7 @@
             <nav class="navigator">
                 <div class="navigator__icon">
                     <a href="index.html">
-                        <img src="/assets/img/icons/spiderman1.png">
+                        <img src="/assets/img/icons/spiderman2.png">
                     </a>
                 </div>
                 <ul>
@@ -25,7 +25,7 @@
         <div class="s-main-content">
             <div class="s-main-content__top">
                 <div class="s-logo">
-                    <img src="/assets/img/spiderman-tobey/movie-1/logo.png" alt="Spiderman (2002)">
+                    <img src="/assets/img/spiderman-andrew/movie-1/logo.png" alt="Spiderman">
                 </div>
                 <div class="s-description">
                     <div class="pills">
