finalizando as subpáginas

--- a/pages/tom-holland/spiderman3.html
+++ b/pages/tom-holland/spiderman3.html
@@ -12,37 +12,37 @@
             <nav class="navigator">
                 <div class="navigator__icon">
                     <a href="index.html">
-                        <img src="/assets/img/icons/spiderman1.png">
+                        <img src="/assets/img/icons/spiderman1-tom.png">
                     </a>
                 </div>
                 <ul>
-                    <li><a href="#">01</a></li>
-                    <li><a href="#">02</a></li>
-                    <li><a href="#">03</a></li>
+                    <li><a href="spiderman3.html">01</a></li>
+                    <li><a href="spiderman3-1.html">02</a></li>
+                    <li><a href="spiderman3-2.html">03</a></li>
                 </ul>
             </nav>
         </div>
         <div class="s-main-content">
             <div class="s-main-content__top">
                 <div class="s-logo">
-                    <img src="/assets/img/spiderman-tobey/movie-1/logo.png" alt="Spiderman (2002)">
+                    <img src="/assets/img/spiderman-tom/movie-1/logo.png" alt="Spiderman (2017)">
                 </div>
                 <div class="s-description">
                     <div class="pills">
                         <ul>
-                            <li>Ano: 2002</li>
-                            <li>Diretor: Sam Raimi</li>
+                            <li>Ano: 2017</li>
+                            <li>Diretor: Jon Watts</li>
                         </ul>
                     </div>
                     <div class="s-description__text">
                         <p>
-                            <strong>Sinopse: </strong>Depois de ser picado por uma aranha geneticamente modificada em uma demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém, ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico Duende Verde.
+                            <strong>Sinopse: </strong>Depois de lutar ao lado dos Vingadores, chegou a hora do jovem Peter Parker voltar para casa em Nova York ao lado de sua tia May. Sob o olhar atento do mentor Tony Stark, Peter começa a abraçar sua nova identidade como Homem-Aranha e combate diariamente pequenos crimes nas redondezas. 
                         </p>
                     </div>
                     <div class="s-links">
                         <ul>
                             <li>
-                                <a href="https://www.youtube.com/watch?v=t06RUxPbp_c" class="link-button" target="_blank">
+                                <a href="https://www.google.com/search?sca_esv=856bbea95b52671d&sxsrf=ADLYWIKi_G-fQbrNOlB4nVx01R_fBQijmQ:1719516704105&q=homem-aranha:+regresso+a+casa+data+de+lan%C3%A7amento&stick=H4sIAAAAAAAAAB3KTQrCMBRGUUQEETpxBcGhILGCCNmDIxcgn-kzic0PJsHE7XTiQtyYrZMDF-5yvm644m3bXU_1mB91s-KO70uvbvW5bc7hZehiOip4p2F26KXgd2PdH5E1IUcjYVkkZYJnKIg0hiUkYh0yDYtWB0duhwivIaYzUkqBgUkkTNMIMQv__cCRz-EHdb-oS5UAAAA&tbm=vid&source=lnms&fbs=AEQNm0AuaLfhdrtx2b9ODfK0pnmi046uB92frSWoVskpBryHTrdWqiVbaH6EqK0Fq9hkAkqKVRfj84cRZhjamCpjPYz8EgAmzy-s_VF4PIRG2yYxZJc2tjqbveSc3a-YYVysfPFiN16Y0mM1OVcQRq50DS9beBZmetsAy5qryXv6ET7c2vG_OZkKVwc2ZtVn6WJT-MRFODA2HejS-VYGIpbYSTnJItwJAA&sa=X&ved=2ahUKEwipndXywvyGAxWkD7kGHerGBW8Q0pQJegQIChAB&biw=1366&bih=656&dpr=1#" class="link-button" target="_blank">
                                     <span class="icon">
                                         <div class="play-icon">&nbsp;</div>
                                     </span>
@@ -58,9 +58,9 @@
             <div class="s-main-content__bottom">
                 <div class="gallery">
                     <ul>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tom/movie-1/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tom/movie-1/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tom/movie-1/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
                     </ul>
                 </div>
             </div>
