--- a/pages/andrew-garfield/spiderman2.html
+++ b/pages/andrew-garfield/spiderman2.html
@@ -12,12 +12,12 @@
             <nav class="navigator">
                 <div class="navigator__icon">
                     <a href="index.html">
-                        <img src="/assets/img/icons/spiderman2.png">
+                        <img src="/assets/img/icons/spiderman1-andrew.png">
                     </a>
                 </div>
                 <ul>
-                    <li><a href="#">01</a></li>
-                    <li><a href="#">02</a></li>
+                    <li><a href="spiderman2.html">01</a></li>
+                    <li><a href="spiderman2-1.html">02</a></li>
                     <li><a href="#">03</a></li>
                 </ul>
             </nav>
@@ -30,19 +30,19 @@
                 <div class="s-description">
                     <div class="pills">
                         <ul>
-                            <li>Ano: 2002</li>
-                            <li>Diretor: Sam Raimi</li>
+                            <li>Ano: 2012</li>
+                            <li>Diretor: James Vanderbilt</li>
                         </ul>
                     </div>
                     <div class="s-description__text">
                         <p>
-                            <strong>Sinopse: </strong>Depois de ser picado por uma aranha geneticamente modificada em uma demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém, ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico Duende Verde.
+                            <strong>Sinopse: </strong> O jovem Peter Parker quer saber mais sobre sua origem. Ele encontra uma pasta que pertenceu ao seu pai e tenta descobrir por que seus pais desapareceram. A sua busca o leva a Oscorp e ao dr. Curt Connors, que tem como alter ego o letal Lagarto.
                         </p>
                     </div>
                     <div class="s-links">
                         <ul>
                             <li>
-                                <a href="https://www.youtube.com/watch?v=t06RUxPbp_c" class="link-button" target="_blank">
+                                <a href="https://www.youtube.com/watch?v=VW51Q_YBsNk" class="link-button" target="_blank">
                                     <span class="icon">
                                         <div class="play-icon">&nbsp;</div>
                                     </span>
@@ -58,9 +58,9 @@
             <div class="s-main-content__bottom">
                 <div class="gallery">
                     <ul>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-andrew/movie-1/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-andrew/movie-1/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-andrew/movie-1/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
                     </ul>
                 </div>
             </div>
