--- a/pages/tobey-maguire/spiderman1-1.html
+++ b/pages/tobey-maguire/spiderman1-1.html
@@ -25,24 +25,24 @@
         <div class="s-main-content">
             <div class="s-main-content__top">
                 <div class="s-logo">
-                    <img src="/assets/img/spiderman-tobey/movie-1/logo.png" alt="Spiderman (2002)">
+                    <img src="/assets/img/spiderman-tobey/movie-2/logo.png" alt="Spiderman (2004)">
                 </div>
                 <div class="s-description">
                     <div class="pills">
                         <ul>
-                            <li>Ano: 2002</li>
+                            <li>Ano: 2004</li>
                             <li>Diretor: Sam Raimi</li>
                         </ul>
                     </div>
                     <div class="s-description__text">
                         <p>
-                            <strong>Sinopse: </strong>Depois de ser picado por uma aranha geneticamente modificada em uma demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém, ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico Duende Verde.
+                            <strong>Sinopse: </strong>O Dr. Otto Octavius é transformado em Doutor Octopus quando uma falha em uma experiência de fusão nuclear resulta em uma explosão que mata sua esposa. Ele culpa o Homem-Aranha pelo acidente e deseja vingança. Enquanto isso, o alter ego do herói, Peter Parker, perde seus poderes. Para complicar as coisas, o seu melhor amigo odeia o Homem-Aranha e sua amada fica noiva.
                         </p>
                     </div>
                     <div class="s-links">
                         <ul>
                             <li>
-                                <a href="https://www.youtube.com/watch?v=t06RUxPbp_c" class="link-button" target="_blank">
+                                <a href="https://www.youtube.com/watch?v=3jBFwltrxJw" class="link-button" target="_blank">
                                     <span class="icon">
                                         <div class="play-icon">&nbsp;</div>
                                     </span>
@@ -58,9 +58,9 @@
             <div class="s-main-content__bottom">
                 <div class="gallery">
                     <ul>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-2/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-2/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-2/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
                     </ul>
                 </div>
             </div>
