--- a/pages/tobey-maguire/spiderman1-2.html
+++ b/pages/tobey-maguire/spiderman1-2.html
@@ -25,24 +25,24 @@
         <div class="s-main-content">
             <div class="s-main-content__top">
                 <div class="s-logo">
-                    <img src="/assets/img/spiderman-tobey/movie-1/logo.png" alt="Spiderman (2002)">
+                    <img src="/assets/img/spiderman-tobey/movie-3/logo.png" alt="Spiderman (2007)">
                 </div>
                 <div class="s-description">
                     <div class="pills">
                         <ul>
-                            <li>Ano: 2002</li>
+                            <li>Ano: 2007</li>
                             <li>Diretor: Sam Raimi</li>
                         </ul>
                     </div>
                     <div class="s-description__text">
                         <p>
-                            <strong>Sinopse: </strong>Depois de ser picado por uma aranha geneticamente modificada em uma demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém, ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico Duende Verde.
+                            <strong>Sinopse: </strong>O relacionamento entre Peter Parker e Mary Jane parece estar dando certo, mas outros problemas começam a surgir. A roupa de Homem-Aranha torna-se preta e acaba controlando Peter - apesar de aumentar seus poderes, ela revela e amplia o lado obscuro de sua personalidade. Com isso, os vilões Venom e Homem-Areia tentam destruir o herói.
                         </p>
                     </div>
                     <div class="s-links">
                         <ul>
                             <li>
-                                <a href="https://www.youtube.com/watch?v=t06RUxPbp_c" class="link-button" target="_blank">
+                                <a href="https://www.youtube.com/watch?v=e5wUilOeOmg" class="link-button" target="_blank">
                                     <span class="icon">
                                         <div class="play-icon">&nbsp;</div>
                                     </span>
@@ -58,9 +58,9 @@
             <div class="s-main-content__bottom">
                 <div class="gallery">
                     <ul>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-3/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-3/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-3/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
                     </ul>
                 </div>
             </div>
