--- a/pages/tom-holland/spiderman3-1.html
+++ b/pages/tom-holland/spiderman3-1.html
@@ -12,37 +12,37 @@
             <nav class="navigator">
                 <div class="navigator__icon">
                     <a href="index.html">
-                        <img src="/assets/img/icons/spiderman1.png">
+                        <img src="/assets/img/icons/spiderman1-tom.png">
                     </a>
                 </div>
                 <ul>
-                    <li><a href="spiderman1.html">01</a></li>
-                    <li><a href="spiderman1-1.html">02</a></li>
-                    <li><a href="spiderman1-2.html">03</a></li>
+                    <li><a href="spiderman3.html">01</a></li>
+                    <li><a href="spiderman3-1.html">02</a></li>
+                    <li><a href="spiderman3-2.html">03</a></li>
                 </ul>
             </nav>
         </div>
         <div class="s-main-content">
             <div class="s-main-content__top">
                 <div class="s-logo">
-                    <img src="/assets/img/spiderman-tobey/movie-1/logo.png" alt="Spiderman (2002)">
+                    <img src="/assets/img/spiderman-tom/movie-2/logo.png" alt="Spiderman">
                 </div>
                 <div class="s-description">
                     <div class="pills">
                         <ul>
-                            <li>Ano: 2002</li>
-                            <li>Diretor: Sam Raimi</li>
+                            <li>Ano: 2019</li>
+                            <li>Diretor: Jon Watts</li>
                         </ul>
                     </div>
                     <div class="s-description__text">
                         <p>
-                            <strong>Sinopse: </strong>Depois de ser picado por uma aranha geneticamente modificada em uma demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém, ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico Duende Verde.
+                            <strong>Sinopse: </strong>Peter Parker está em uma viagem de duas semanas pela Europa, ao lado de seus amigos de colégio, quando é surpreendido pela visita de Nick Fury. Convocado para mais uma missão heroica, ele precisa enfrentar vários vilões que surgem em cidades-símbolo do continente, como Londres, Paris e Veneza, e também a aparição do enigmático Mysterio.
                         </p>
                     </div>
                     <div class="s-links">
                         <ul>
                             <li>
-                                <a href="https://www.youtube.com/watch?v=t06RUxPbp_c" class="link-button" target="_blank">
+                                <a href="https://www.youtube.com/watch?v=MqQdHaBtvGs" class="link-button" target="_blank">
                                     <span class="icon">
                                         <div class="play-icon">&nbsp;</div>
                                     </span>
@@ -58,9 +58,9 @@
             <div class="s-main-content__bottom">
                 <div class="gallery">
                     <ul>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
-                        <li><a href="#"><img src="/assets/img/spiderman-tobey/movie-1/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tom/movie-2/gallery/image-01.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tom/movie-2/gallery/image-02.png" alt="Foto do filme do Homem-Aranha."></a></li>
+                        <li><a href="#"><img src="/assets/img/spiderman-tom/movie-2/gallery/image-03.png" alt="Foto do filme do Homem-Aranha."></a></li>
                     </ul>
                 </div>
             </div>
